Added rate parameter to accelerate the ball

--- a/src/index.html
+++ b/src/index.html
@@ -109,13 +109,12 @@
         }
 
         function hitsLeftPaddle() {
-            return ballX <= 0 + paddle1Width && (ballY >= paddle1Y && ballY <= paddle1Y + paddle1Height);
+            return ballX <= 0 + paddle1Width && (ballY >= paddle1Y - 4 && ballY <= paddle1Y + paddle1Height + 4);
         }
 
         function hitsRightPaddle() {
-            return ballX >= canvas.width - paddle2Width && (ballY >= paddle2Y && ballY <= paddle2Y + paddle2Height);
+            return ballX >= canvas.width - paddle2Width && (ballY >= paddle2Y - 4 && ballY <= paddle2Y + paddle2Height + 4);
         }
-
 
         // Collision with wall or paddle
         function leftCollision() {
@@ -124,6 +123,11 @@
             } else if (ballX + dx < 0) {
                 p2Score++;
                 initBoard();
+            }
+            if (p2Score >= 10) {
+                alert("Congratulations player 1! YOU WIN!");
+                p2Score = 0;
+                document.location.reload();
             }
         }
 
@@ -134,6 +138,25 @@
             } else if (ballX + dx > canvas.width) {
                 p1Score++;
                 initBoard();
+            }
+            if (p1Score >= 10) {
+                alert("Congratulations player 1! YOU WIN!");
+                p1Score = 0;
+                document.location.reload();
+            }
+        }
+
+        function accelerateBall(rate) {
+            // Slowly accelerates ball
+            if (dx > 0) {
+                dx += rate;
+            } else {
+                dx -= rate;
+            }
+            if (dy > 0) {
+                dy += rate;
+            } else {
+                dy -= rate;
             }
         }
 
@@ -160,6 +183,7 @@
             ctx.fill();
             ctx.closePath();
         }
+
 
         function updatePositions() {
             if (upPressed && paddle2Y - 1 > 0) {
@@ -190,25 +214,18 @@
 
             // Adjust y values based on keyPresses
             updatePositions();
+            // paddle1Y = ballY - paddle1Height / 2;
             // Call any collisions and draw objects
             verticalCollision();
             leftCollision();
             rightCollision();
             drawPaddles();
             drawBall();
+            accelerateBall(.0003);
+            // Moves the ball
             ballX += dx;
             ballY += dy;
-            // Slowly accelerates ball
-            if (dx > 0) {
-                dx += .0003;
-            } else {
-                dx -= .0003;
-            }
-            if (dy > 0) {
-                dy += .0003;
-            } else {
-                dy -= .0003;
-            }
+
         }
         document.addEventListener("keydown", keyDownHandler, false);
         document.addEventListener("keyup", keyUpHandler, false);
