added test file

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
         // Keypressed booleans
+        // blah
         let upPressed = false;
         let downPressed = false;
         let wPressed = false;
