--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 
 <body>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <canvas id="myCanvas"></canvas>
     <script src="index.js"></script>
 </body>
