--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <input type="radio" name="difficulty" value="Medium"> Medium<br>
         <input type="radio" name="difficulty" value="Hard"> Hard
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
     <button id="playButton" onclick="playGame()">
         Play!
     </button>
