--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         canvas.height = window.innerHeight;
     </script>
     <div id="radios" class="radioButtons">
-        <input type="radio" name="difficulty" value="Easy"> Easy<br>
+        <input checked="yes" type="radio" name="difficulty" value="Easy"> Easy<br>
         <input type="radio" name="difficulty" value="Medium"> Medium<br>
         <input type="radio" name="difficulty" value="Hard"> Hard
     </div>
