--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <canvas id="myCanvas"></canvas>
-    <div id="radios" class="radioButtons">
-        <input checked="yes" type="radio" name="difficulty" value="Easy"> Easy<br>
-        <input type="radio" name="difficulty" value="Medium"> Medium<br>
-        <input type="radio" name="difficulty" value="Hard"> Hard
+    <div id="radios">
+        <input checked="yes" type="radio" name="difficulty" id="Easy"> Easy<br>
+        <input type="radio" name="difficulty" id="Medium"> Medium<br>
+        <input type="radio" name="difficulty" id="Hard"> Hard
     </div>
     <script src="script.js"></script>
     <button id="playButton" onclick="playGame()">
